# PipelineScheduler-icsoc

./: .git-credentials  .gitignore  CMakeCache.txt  CMakeLists-container.txt  CMakeLists.txt  DartConfiguration.tcl  Dockerfile  LICENSE  README.md  jetson.Dockerfile  jetson_profiler.py  outputbuffer.pl
analyze/: database_conn.py  final_figures.py  main.py  objectcount.py  run_log_analyzes.py
dockerfiles/: DOCKERFILE-amd64  DOCKERFILE-jetson  Dockerfile  README  download_model_agx.txt  download_model_nx.txt  download_model_orn.txt  upload_model.txt  upload_model_agx.txt  upload_model_nx.txt
generator/gpu_upload_chunk_vs_indiv/: CMakeLists.txt  gpu_upload_chunk_vs_indiv.cpp
generator/gpu_upload_chunk_vs_indiv/cmake/: CMakeCache.txt  ccache.cmake
jsons/: README  age.json  age_trt.json  arcface.json  arcface_preproc.json  arcface_trt.json  bandwidth-limited-old.json  bandwidth-limited.json  bandwidth.json  bandwidth_limits1.json  bandwidth_limits2.json  bandwidth_limits3.json  bandwidth_limits4.json  bandwidth_limits5.json  bandwidth_limits6.json  bandwidth_limits7.json  bandwidth_limits8.json  bandwidth_limits9.json  carbrand.json  container_lib.json  data_source.json  datasource.json  emotionnet.json  emotionnet_preproc.json  emotionnet_trt.json  example_experiment.json  experiment.json  gender.json  gender_trt.json  movenet.json  movenet_preproc.json  movenet_trt.json  object_count.json  platedet.json  retina1face-source.json  retina1face.json  retinaface.json  retinaface_preproc.json  retinaface_trt.json  retinamtface.json  (+7 more)
jsons/experiments/: 100reduced-slo-dis.json  100reduced-slo-jlf.json  100reduced-slo-ppp.json  100reduced-slo-rim.json  30-fps-dis.json  30-fps-jlf.json  30-fps-ppp.json  30-fps-rim.json  50reduced-slo-jlf.json  50reduced-slo-ppp.json  50reduced-slo-rim.json  ablation-onlyserver-ppp.json  ablation-staticbatch-ppp.json  ablation-withouttemporal-onlyserver-ppp.json  ablation-withouttemporal-ppp.json  alldevice.json  bandwidth-limiting-dis.json  bandwidth-limiting-jlf.json  bandwidth-limiting-ppp.json  bandwidth-limiting-rim.json  base-experiment.json  dbg-full-run-ppp.json  dbg-full-run-rim.json  dbg-long-runtime-ppp.json  distream-intro.json  full-run-dis.json  full-run-jlf.json  full-run-ppp.json  full-run-rim.json  full-run.json  jellyfish-intro.json  long-runtime-ppp.json  pipeplusplus-intro.json  pipeplusplus-traffic.json  pipeplusplus-traffic2.json  retina1face-test.json  rim-intro.json  rim-traffic2.json
libs/age/: CMakeLists.txt  age.cpp  age.h
libs/arcface/: CMakeLists.txt  arcface.cpp  arcface.h  arcfaceinference.cpp  arcfacepostprocessor.cpp  arcfacepreprocessor.cpp
libs/arcface/cmake/: arcface-config.cmake.in
libs/arcface/conversion/: torch2trt.py
libs/baseprocessors/: CMakeLists.txt  basebatcher.cpp  basebatchinferencer.cpp  basebboxcropper.cpp  basebboxcropperaugmentation.cpp  basebboxcropperverifier.cpp  baseclassifier.cpp  basekeypointsketcher.cpp  basekpointextractor.cpp  basepostprocessor.cpp  basepostprocessor.h  basepreprocessor.cpp  basepreprocessor.h  baseprocessor.cpp  baseprocessor.h  basereqbatcher.cpp  basesink.cpp  basesoftmaxclassifier.cpp  baseutils.cpp  data_reader.cpp  data_reader.h
libs/carbrand/: CMakeLists.txt  carbrand.cpp  carbrand.h
libs/communicator/: CMakeLists.txt  communicator.cpp  communicator.h  main.cpp  pipelinescheduler.proto  profilegenerator.cpp  profilegenerator.h  receiver.cpp  receiver.h  sender.cpp  sender.h
libs/communicator/cmake/: communicator-config.cmake.in
libs/container_agent/: CMakeLists.txt  container_agent.cpp  container_agent.h  profiler.cpp  profiler.h
libs/container_agent/cmake/: container_agent-config.cmake.in
libs/controller/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  scheduling-dis.cpp  scheduling-dis.h  scheduling-jlf.cpp  scheduling-jlf.h  scheduling-ppp.cpp  scheduling-ppp.h  scheduling-rim.cpp  scheduling-rim.h
libs/controller/cmake/: controller-config.cmake.in
libs/data_source/: CMakeLists.txt  data_reader.cpp  data_reader.h  data_source.cpp  data_source.h  main.cpp
libs/device_agent/: CMakeLists.txt  device_agent.cpp  device_agent.h  dummy.py  get_jetson_stats.py  main.cpp  profiler.cpp  profiler.h
libs/device_agent/cmake/: device_agent-config.cmake.in
libs/device_agent/sink_agent/: CMakeLists.txt  main.cpp  sink_agent.h
libs/device_agent/sink_agent/cmake/: sink_agent-config.cmake.in
libs/emotionnet/: CMakeLists.txt  emotionnet.cpp  emotionnet.h
libs/gender/: CMakeLists.txt  gender.cpp  gender.h
libs/microservice/: CMakeLists.txt  microservice.cpp  microservice.h  receiver.cpp
libs/microservice/cmake/: microservice-config.cmake.in
libs/misc/: CMakeLists.txt  misc.cpp  misc.h
libs/movenet/: CMakeLists.txt  movenet.cpp  movenet.h
libs/onnx2trt/: CMakeLists.txt  onnx2trt.cpp
libs/profiler/: CMakeLists.txt
libs/protobufprotocols/: CMakeLists.txt  controlcommunication.proto  dataexchange.proto  indevicecommunication.proto  pipelinescheduler.proto
libs/protobufprotocols/cmake/: protobufprotocols-config.cmake.in
libs/retinaface/: CMakeLists.txt  retinaface.cpp  retinaface.h  retinafaceinference.cpp  retinafacepostprocessor.cpp  retinafacepreprocessor.cpp
libs/sink_agent/: CMakeLists.txt  sink_agent.cpp
libs/trtengine/: CMakeLists.txt  trtengine.cpp  trtengine.h
libs/utils/profiler-jetson/: CMakeLists.txt  profiler.h
libs/yolov5/: CMakeLists.txt  yolov5.cpp  yolov5.h  yolov5inference.cpp  yolov5postprocessor.cpp  yolov5preprocessor.cpp
libs/yolov5-plate/: CMakeLists.txt  yolov5-plate.cpp  yolov5-plate.h
libs/yolov5/cmake/: yolov5-config.cmake.in
libs/yolov8/: CMakeLists.txt  yolov8.h  yolov8_pose.cpp  yolov8_segment.cpp
logs/: placeholder
model_profiles/: placeholder
predictor/simc++/: CMakeLists.txt  predict.cpp
predictor/simulator/: plot_data.py  train.py
scripts/: bandwidth.json  change_table_names_that_had_a_keyword.sh  collect_dataset.sh  create_json_from_5g_dataset.py  delete_table_with_keyword.sh  set_bandwidth.sh  stop_containers_with_keywords.sh
src/: main.cpp  profiling.cpp
(+72 files in other folders)
